# shadcn-feed-reader

./: .dockerignore  .gitignore  ANDROID_BUILD_STEPS.md  DEBUG_FEED_DIRECTORY.md  Dockerfile  README.md  capacitor.config.ts  debug-all-js-logs.sh  debug-feed-directory.sh  debug-logs.sh  debug-orientation-all.sh  debug-orientation.sh  debug-view-mode.sh  feedreader.local-key.pem  feedreader.local.pem  index.html  package-lock.json  package.json  pnpm-lock.yaml  rebuild-android.sh  tailwind.config.cjs  vite.config.ts
.codacy/: codacy.yaml
android/: build.gradle  capacitor.settings.gradle  settings.gradle
android-capacitor-plugin-skeleton/: README.md
android/app/: .project  build.gradle  capacitor.build.gradle
android/app/libs/raw-html-plugin/: .project  build.gradle
android/app/src/main/res/drawable/: splash.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/main/res/xml/: network_security_config.xml
dev-dist/: sw.js
docs/: DRAG_DROP_SPEC.md
jules-scratch/verification/: verify_article_view.py  verify_stacked_cards.py  verify_toolbar.py
public/: manifest.json
public/locales/en/: translation.json
public/locales/fr/: translation.json
src/: i18n.ts  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs  server.rs  shared.rs
src/backends/: nextcloud.tsx  types.ts
src/backends/nextcloud-news/: nextcloud-news-types.ts  nextcloud-news.tsx  types.ts
src/components/: auth-dialog.tsx  confirm-dialog.tsx  feed-directory-dialog-parts.tsx  feed-directory-dialog.tsx  image-context-menu.tsx  mobile-back-button.tsx  profile-dropdown.tsx  rename-dialog.tsx  search-dialog.tsx  search.tsx  subscribe-button.tsx  theme-switch.tsx  thumbnail-image.tsx
src/components/layout/: app-sidebar.tsx  folders-nav-group.tsx  header.tsx  main.tsx  nav-group.tsx  nav-user.tsx  sidebar-resize-handle.tsx  types.ts
src/components/layout/data/: sidebar-data.ts
src/components/layout/loaders/: folders-loader.tsx  itemslist-loader.tsx  webpage-loader.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  feed-favicon.tsx  resize-handle.tsx  sidebar.tsx
src/context/: feed-query-context.ts  feed-query-provider.tsx  font-size-context.tsx  proxy-auth-provider.tsx  search-context.tsx  theme-context.tsx  use-feed-query.ts
src/features/auth/: auth-layout.tsx
src/features/auth/sign-in/: index.tsx  sign-in-2.tsx
src/features/auth/sign-in/components/: user-auth-form.tsx
src/features/chats/: index.tsx
src/features/dashboard/: index.tsx
src/features/errors/: general-error.tsx
src/features/feeds/: ArticleToolbar.tsx  AuthConfigTab.tsx  FeedArticle.tsx  FilterItemList.tsx  FloatingActionButton.tsx  SelectorConfigDialog.tsx  StackedArticleCard.tsx  article-html-preparation.ts  article-view-handlers.ts  article-zoom-scripts.ts  index.tsx  items-list.tsx  selector-config-types.ts
src/features/settings/: index.tsx
src/features/tasks/: index.tsx
src/hooks/: use-feed-directory.ts  use-feed-query.ts  use-mobile.tsx  use-orientation.tsx  use-proxy-auth.tsx  use-resizable-panels-flex.tsx  use-sidebar-resize.tsx
src/lib/: article-extractor.ts  article-view-storage.ts  auth-storage.ts  encryption.ts  lazy-image-fix.ts  raw-html.ts  readability.ts  readext.ts  safe-invoke.ts  secure-image-url.ts  selector-config-storage.ts  settings-export.ts  tweet-embed.ts  utils.ts
src/routes/: __root.tsx
src/routes/_authenticated/: $feedsFilter.tsx  route.tsx
src/routes/_authenticated/all/all/: index.tsx
src/routes/_authenticated/all/all/folder/: $folderId.tsx
src/routes/_authenticated/all/starred/: index.tsx
src/routes/_authenticated/all/starred/folder/: $folderId.tsx
src/routes/_authenticated/feeds/: $feedsId.tsx
src/routes/_authenticated/unread/all/: index.tsx
src/routes/_authenticated/unread/starred/: index.tsx
src/types/: feed-directory.ts
src/utils/: auth.ts  feed-directory-icons.tsx  feed-resource.ts  grouping.ts  request.ts  resource.ts
(+11 files in other folders)
