[package]
name = "shadcn-feed-reader"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["gzip", "brotli", "deflate", "stream"] }
readability = "0.3.0"
url = "2.5.0"
regex = "1.10"
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
lol_html = "1.2.0"
portpicker = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mime_guess = "2.0.4"
base64 = "0.22.1"
urlencoding = "2.1.3"
