[package]
name = "shadcn-feed-reader"
version = "1.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.91"

default-run = "shadcn-feed-reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs"]

[dependencies]
tauri = { version = "2.9.2", features = ["macos-private-api"], optional = true }
tauri-plugin-shell = { version = "2.3.3", optional = true }
tauri-plugin-dialog = { version = "2.6.0", optional = true }
tauri-plugin-fs = { version = "2.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["gzip", "brotli", "deflate", "stream", "cookies"] }
readability = "0.3.0"
url = "2.5.0"
regex = "1.10"
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full", "fs"] }
lol_html = "1.2.0"
scraper = "0.20.0"
portpicker = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mime_guess = "2.0.4"
base64 = "0.22.1"
urlencoding = "2.1.3"

[lib]
name = "shadcn_feed_reader"
path = "src/lib.rs"

[[bin]]
name = "shadcn-feed-reader"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "shadcn-feed-server"
path = "src/server.rs"
